# vector-art

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake-format.yml  main.yml
cmake/: run-conan.cmake
src/: CMakeLists.txt  main.cpp
src/nlohmann/: external_types.cpp  external_types.hpp
src/vecart/: widgets.cpp  widgets.hpp
